[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "l2f"
version = "2.0.10"
authors = [
    {name = "Jonas Eschmann", email = "jonas.eschmann@gmail.com"}
]
description = "Python bindings for the L2F (Learning to Fly) Simulator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rl-tools/l2f"
Issues = "https://github.com/rl-tools/l2f/issues"